--- a/nginx-proxy-manager.yml
+++ b/nginx-proxy-manager.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 services:
   app:
     image: 'jc21/nginx-proxy-manager:latest'
@@ -8,6 +8,8 @@ services:
       - '80:80'
       - '443:443'
       - '81:81'
+    environment:
+      - DB_SQLITE_FILE: "/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/nginx-proxy-manager/data/database.sqlite"
     volumes:
       - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/nginx-proxy-manager:/data/'
       - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/nginx-proxy-manager:/letsencrypt/'
