--- a/gotify.yml
+++ b/gotify.yml
@@ -1,19 +1,17 @@
-version: "3.8"
+version: '3.8'
 services:
   gotify:
     container_name: gotify
     restart: unless-stopped
     image: gotify/server:latest
-    labels:
-      - com.centurylinklabs.watchtower.enable=true
     ports:
-      - ${port}:80
+      - 4080:80
     environment:
       - GOTIFY_DEFAULTUSER_NAME=${username}
       - GOTIFY_DEFAULTUSER_PASS=${password}
       - TZ="Europe/Paris"
     volumes:
-      - nfs_data:/app/data
+      - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/gotify/data:/app/data'
     networks:
       - frontend
       - backend
