--- a/gotify.yml
+++ b/gotify.yml
@@ -15,4 +15,4 @@ services:
       - GOTIFY_PLUGINSDIR=data/plugins
       - TZ=Europe/Paris
     volumes:
-      - /srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/gotify/data:/app/data
+      - ./config:/app/data
