--- a/gotify.yml
+++ b/gotify.yml
@@ -8,11 +8,11 @@ services:
     environment:
       - GOTIFY_DATABASE_DIALECT=sqlite3
       - GOTIFY_DATABASE_CONNECTION=data/gotify.db
-      - GOTIFY_DEFAULTUSER_NAME=admin
-      - GOTIFY_DEFAULTUSER_PASS=admin
+      - GOTIFY_DEFAULTUSER_NAME=${username}
+      - GOTIFY_DEFAULTUSER_PASS=${password}
       - GOTIFY_PASSSTRENGTH=10
       - GOTIFY_UPLOADEDIMAGESDIR=data/images
       - GOTIFY_PLUGINSDIR=data/plugins
       - TZ=Europe/Paris
     volumes:
-      - ./config:/app/data
+      - /srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/gotify/data/:/app/data
