--- a/gotify.yml
+++ b/gotify.yml
@@ -8,6 +8,8 @@ services:
     environment:
       - GOTIFY_DATABASE_DIALECT=sqlite3
       - GOTIFY_DATABASE_CONNECTION=data/gotify.db
+      - GOTIFY_DEFAULTUSER_PASS=admin
+      - GOTIFY_DEFAULTUSER_NAME=admin
       - GOTIFY_PASSSTRENGTH=10
       - GOTIFY_UPLOADEDIMAGESDIR=data/images
       - GOTIFY_PLUGINSDIR=data/plugins
