--- a/gotify.yml
+++ b/gotify.yml
@@ -11,17 +11,10 @@ services:
       - GOTIFY_DEFAULTUSER_PASS=${password}
       - TZ="Europe/Paris"
     volumes:
-      - nfs_data:/app/data
+      - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/gotify/data/:/app/data'
     networks:
       - frontend
       - backend
-volumes:
-  nfs_data:
-    driver: local
-    driver_opts:
-      type: nfs
-      o: addr=${address},rw,soft,nfsvers=4
-      device: ${path_nfs_data}
 networks:
   backend:
     external: true
