--- a/vaultwarden.yml
+++ b/vaultwarden.yml
@@ -1,10 +1,13 @@
 version: '3.3'
 services:
-  server:
-    restart: unless-stopped
+  vaultwarden:
+    image: vaultwarden/server:latest
     container_name: vaultwarden
+    restart: unless-stopped
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
     volumes:
       - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/vaultwarden:/data/'
     ports:
       - '4000:80'
-    image: vaultwarden/server:latest
+  
