--- a/plex.yml
+++ b/plex.yml
@@ -1,16 +1,21 @@
 version: "3.7"
 services:
   plex:
-    image: plexinc/pms-docker:latest
     container_name: plex
-    network_mode: host
+    image: plexinc/pms-docker:latest
+    restart: unless-stopped
     environment:
       - PUID=0
       - PGID=0
       - TZ=EUROPE/Paris
       - VERSION=docker
-      - PLEX_CLAIM=claim-GuDaVKHvu5LyqwmCoYVE
+      - PLEX_CLAIM=${CLAIM}
       - HOSTNAME=PlexServer
+    volumes:
+      - '/docker/plexserver/config:/config'
+      - '/docker/plexserver/transcode:/transcode'
+      - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153:/tv'
+    network_mode: host
     ports:
       - 32400:32400/tcp
       - 1900:1900/udp
@@ -21,8 +26,3 @@ services:
       - 32413:32413/udp
       - 32414:32414/udp
       - 32469:32469/tcp
-    volumes:
-      - '/docker/plexserver/config:/config'
-      - '/docker/plexserver/transcode:/transcode'
-      - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153:/tv'
-    restart: unless-stopped
