--- a/nginx-proxy-manager.yml
+++ b/nginx-proxy-manager.yml
@@ -1,14 +1,14 @@
-version: "3"
+version: '3'
 services:
-  app:
-    image: 'jc21/nginx-proxy-manager:latest'
+  nginx-proxy-manager:
+    image: jc21/nginx-proxy-manager:latest
     container_name: nginx-proxy-manager
     restart: unless-stopped
-    ports:
-      - '80:80'
-      - '443:443'
-      - '81:81'
     volumes:
       - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/nginx-proxy-manager:/data/'
       - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/nginx-proxy-manager:/letsencrypt/'
       - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/nginx-proxy-manager:/etc/letsencrypt/'
+    ports:
+      - '80:80'
+      - '443:443'
+      - '81:81'
