--- a/navidrome.yml
+++ b/navidrome.yml
@@ -11,3 +11,5 @@ services:
     volumes:
       - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/navidrome/data/:/data'
       - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/musiques/musics/:/music/ro'
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
