--- a/filebrowser.yml
+++ b/filebrowser.yml
@@ -12,3 +12,5 @@ services:
       - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/filebrowser/config:/config'
     ports:
       - 8080:8080
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
