--- a/nginx-proxy-manager.yml
+++ b/nginx-proxy-manager.yml
@@ -12,3 +12,5 @@ services:
       - '80:80'
       - '443:443'
       - '81:81'
+    label:
+      - com.centurylinklabs.watchtower.monitor-only=true
