--- a/gotify.yml
+++ b/gotify.yml
@@ -10,3 +10,5 @@ services:
       - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/gotify/data:/app/data gotify/server'
     ports:
       - 4080:80
+    labels:
+      - com.centurylinklabs.watchtower.monitor-only=true
