--- a/watchtower.yml
+++ b/watchtower.yml
@@ -13,7 +13,7 @@ services:
       - WATCHTOWER_LABEL_ENABLE=true
       - WATCHTOWER_MONITOR_ONLY=true
       - WATCHTOWER_NOTIFICATIONS=gotify
-      - WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN="A0WItLrD_rReSAm"
+      - WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN="A0WItLrD_"
       - WATCHTOWER_NOTIFICATION_GOTIFY_URL="https://gotify.pariteau.fr"
     volumes:
       - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/watchtower:/var/run/docker.sock'
