--- a/watchtower.yml
+++ b/watchtower.yml
@@ -16,4 +16,4 @@ services:
       - WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN=${TOKEN}
       - WATCHTOWER_NOTIFICATION_GOTIFY_URL=${URL}
     volumes:
-      - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/watchtower:/var/run/docker.sock'
+      - '/var/run/docker.sock:/var/run/docker.sock'
