--- a/gotify.yml
+++ b/gotify.yml
@@ -6,6 +6,8 @@ services:
     restart: unless-stopped
     environment:
       - TZ="Europe/Paris"
+      - GOTIFY_DEFAULTUSER_NAME=${username}
+      - GOTIFY_DEFAULTUSER_PASS=${password}
     volumes:
       - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/gotify/data:/app/data gotify/server'
     ports:
