--- a/watchtower.yml
+++ b/watchtower.yml
@@ -15,5 +15,13 @@ services:
       - WATCHTOWER_NOTIFICATIONS=gotify
       - WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN=${TOKEN}
       - WATCHTOWER_NOTIFICATION_GOTIFY_URL=${URL}
+      - WATCHTOWER_NOTIFICATIONS=email
+      - WATCHTOWER_NOTIFICATION_EMAIL_FROM=
+      - WATCHTOWER_NOTIFICATION_EMAIL_TO=
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=
+      - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock'
