--- a/watchtower.yml
+++ b/watchtower.yml
@@ -16,12 +16,12 @@ services:
       - WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN=${TOKEN}
       - WATCHTOWER_NOTIFICATION_GOTIFY_URL=${URL}
       - WATCHTOWER_NOTIFICATIONS=email
-      - WATCHTOWER_NOTIFICATION_EMAIL_FROM=
-      - WATCHTOWER_NOTIFICATION_EMAIL_TO=
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=
+      - WATCHTOWER_NOTIFICATION_EMAIL_FROM=${emailurlfrom}
+      - WATCHTOWER_NOTIFICATION_EMAIL_TO=${emailurlto}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=${email}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=${emailport}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=${emaillogin}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${emailpassword}
       - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock'
