--- a/watchtower.yml
+++ b/watchtower.yml
@@ -18,7 +18,7 @@ services:
       - WATCHTOWER_NOTIFICATIONS=email
       - WATCHTOWER_NOTIFICATION_EMAIL_FROM=${emailurlfrom}
       - WATCHTOWER_NOTIFICATION_EMAIL_TO=${emailurlto}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=${email}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=${smtpserver}
       - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=${emailport}
       - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=${emaillogin}
       - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${emailpassword}
