--- a/watchtower.yml
+++ b/watchtower.yml
@@ -21,7 +21,7 @@ services:
       - WATCHTOWER_NOTIFICATION_EMAIL_SERVER=${smtpserver}
       - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=${emailport}
       - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=${emaillogin}
-      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${emailpassword}
+      - WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=${apppassword}
       - WATCHTOWER_NOTIFICATION_EMAIL_DELAY=2
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock'
