--- a/watchtower.yml
+++ b/watchtower.yml
@@ -13,8 +13,8 @@ services:
       - WATCHTOWER_LABEL_ENABLE=true
       - WATCHTOWER_MONITOR_ONLY=true
       - WATCHTOWER_NOTIFICATIONS=gotify
-      - WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN=${TOKEN}
-      - WATCHTOWER_NOTIFICATION_GOTIFY_URL=${URL}
+      - WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN=${token}
+      - WATCHTOWER_NOTIFICATION_GOTIFY_URL=${url}
       - WATCHTOWER_NOTIFICATIONS=email
       - WATCHTOWER_NOTIFICATION_EMAIL_FROM=${emailurlfrom}
       - WATCHTOWER_NOTIFICATION_EMAIL_TO=${emailurlto}
