--- a/monitoring.yml
+++ b/monitoring.yml
@@ -51,7 +51,8 @@ services:
       - grafana_data:/var/lib/grafana
       - /docker/grafana/provisioning:/etc/grafana/provisioning/
     env_file:
-      - ./grafana/config.monitoring
+      - GF_SECURITY_ADMIN_PASSWORD=${grafana_password}
+      - GF_USERS_ALLOW_SIGN_UP=false
     networks:
       - monitoring
     restart: unless-stopped
