--- a/monitoring.yml
+++ b/monitoring.yml
@@ -41,7 +41,7 @@ services:
     networks:
       - monitoring
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana-oss:latest
     user: "admin"
     depends_on:
       - prometheus
