--- a/watchtower.yml
+++ b/watchtower.yml
@@ -8,7 +8,7 @@ services:
       - TZ=Europe/Paris
       - WATCHTOWER_SCHEDULE= 0 0 3 * * *
       - WATCHTOWER_CLEANUP=true
-      - WATCHTOWER_REMOVE_VOLUMES=true
+#      - WATCHTOWER_REMOVE_VOLUMES=true
       - WATCHTOWER_LOG_LEVEL=info
       - WATCHTOWER_LABEL_ENABLE=true
       - WATCHTOWER_MONITOR_ONLY=true
