--- a/watchtower.yml
+++ b/watchtower.yml
@@ -12,6 +12,7 @@ services:
       - WATCHTOWER_LOG_LEVEL=info
       - WATCHTOWER_LABEL_ENABLE=true
       - WATCHTOWER_MONITOR_ONLY=true
+      - WATCHTOWER_NO_PULL=true
       - WATCHTOWER_NOTIFICATIONS=gotify
       - WATCHTOWER_NOTIFICATION_GOTIFY_TOKEN=${token}
       - WATCHTOWER_NOTIFICATION_GOTIFY_URL=${url}
