--- a/navidrome.yml
+++ b/navidrome.yml
@@ -9,7 +9,8 @@ services:
     environment:
       ND_SCANSCHEDULE: 24h
     volumes:
-      - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/navidrome/data/:/data'
-      - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/musiques/musics/:/music/ro'
+      - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/navidrome/data:/data'
+#      - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/musiques/musics:/music/ro'
+      - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/musiques/musics:/music'
     labels:
       - com.centurylinklabs.watchtower.enable=true
