--- a/monitoring.yml
+++ b/monitoring.yml
@@ -1,67 +1,139 @@
-version: '3'
+version: '2.1'
+
+networks:
+  monitor-net:
+    driver: bridge
+
+volumes:
+    prometheus_data: {}
+    grafana_data: {}
 
 services:
 
   prometheus:
-    image: prom/prometheus:v2.11.1
+    image: prom/prometheus:v2.48.0
     container_name: prometheus
-    deploy:
-      replicas: 1
     volumes:
-      - /docker/prometheus/prometheus-data:/prometheus
-      - /docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - /docker/alertmanager/alert.rules/alerts.rules.yml:/alertmanager/alert.rules/alerts.rules.yml
+      - ./prometheus:/etc/prometheus
+      - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
-      - '--storage.tsdb.retention.time=365d'
-    network_mode: "host"
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--storage.tsdb.retention.time=200h'
+      - '--web.enable-lifecycle'
+    restart: unless-stopped
+    expose:
+      - 9090
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
 
   alertmanager:
-    image: prom/alertmanager:v0.18.0
+    image: prom/alertmanager:v0.26.0
     container_name: alertmanager
-    deploy:
-      replicas: 1
     volumes:
-      - /docker/alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
-      - /docker/alertmanager/templates/default.tmpl:/etc/alertmanager/templates/default.tmpl
+      - ./alertmanager:/etc/alertmanager
     command:
-      - '--config.file=/etc/alertmanager/alertmanager.yml'
-    network_mode: "host"
+      - '--config.file=/etc/alertmanager/config.yml'
+      - '--storage.path=/alertmanager'
+    restart: unless-stopped
+    expose:
+      - 9093
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
+  nodeexporter:
+    image: prom/node-exporter:v1.7.0
+    container_name: nodeexporter
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.rootfs=/rootfs'
+      - '--path.sysfs=/host/sys'
+      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
+    restart: unless-stopped
+    expose:
+      - 9100
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:v0.47.2
+    container_name: cadvisor
+    privileged: true
+    devices:
+      - /dev/kmsg:/dev/kmsg
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker:/var/lib/docker:ro
+      #- /cgroup:/cgroup:ro #doesn't work on MacOS only for Linux
+    restart: unless-stopped
+    expose:
+      - 8080
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
 
   grafana:
-    image: grafana/grafana:6.2.5
+    image: grafana/grafana:10.2.2
     container_name: grafana
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
     environment:
-      - GF_PATHS_CONFIG=/etc/grafana/grafana.ini
-    deploy:
-      replicas: 1
-    depends_on:
-      - prometheus
+      - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+      - GF_USERS_ALLOW_SIGN_UP=false
+    restart: unless-stopped
+    expose:
+      - 3000
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
+  pushgateway:
+    image: prom/pushgateway:v1.6.2
+    container_name: pushgateway
+    restart: unless-stopped
+    expose:
+      - 9091
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
+  caddy:
+    image: caddy:2.7.5
+    container_name: caddy
+    ports:
+      - "3000:3000"
+      - "8080:8080"
+      - "9090:9090"
+      - "9093:9093"
+      - "9091:9091"
     volumes:
-      - grafana-data:/var/lib/grafana
-      - /docker/grafana/datasource.yml:/etc/grafana/provisioning/datasources/datasource.yml
-      - /docker/grafana/dashboards.yml:/etc/grafana/provisioning/dashboards/dashboards.yml
-      - /docker/grafana/grafana.ini:/etc/grafana/grafana.ini
-      - /docker/grafana/dashboards:/var/lib/grafana/dashboards
-    network_mode: "host"
-
-  blackbox:
-    image: prom/blackbox-exporter:v0.14.0
-    container_name: blackbox_exporter
-    deploy:
-      replicas: 1
-    volumes:
-    - /docker/blackbox:/config
-    network_mode: "host"
-
-  node_exporter:
-    image: prom/node-exporter:v0.18.1
-    container_name: node_exporter
-    deploy:
-      replicas: 1
-    network_mode: "host"
-
-volumes:
-  prometheus-data:
-  grafana-data:
+      - ./caddy:/etc/caddy
+    environment:
+      - ADMIN_USER=${ADMIN_USER:-admin}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+      - ADMIN_PASSWORD_HASH=${ADMIN_PASSWORD_HASH:-$2a$14$1l.IozJx7xQRVmlkEQ32OeEEfP5mRxTpbDTCTcXRqn19gXD8YK1pO}
+    restart: unless-stopped
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
