--- a/monitoring.yml
+++ b/monitoring.yml
@@ -11,11 +11,13 @@ volumes:
 services:
 
   prometheus:
-    image: prom/prometheus:v2.48.0
+    image: prom/prometheus:latest
     container_name: prometheus
     volumes:
-      - ./prometheus:/etc/prometheus
-      - prometheus_data:/prometheus
+#      - ./prometheus:/etc/prometheus
+#      - prometheus_data:/prometheus
+      - /srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/prometheus:/etc/prometheus
+      - /srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/prometheus/prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -32,24 +34,25 @@ services:
       org.label-schema.group: "monitoring"
 
   alertmanager:
-    image: prom/alertmanager:v0.26.0
-    container_name: alertmanager
+    image: prom/alertmanager:latest
+    container_name: alert_manager
     volumes:
-      - ./alertmanager:/etc/alertmanager
+#      - ./alertmanager:/etc/alertmanager
+      - /srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/alertmanager:/etc/alertmanager
     command:
       - '--config.file=/etc/alertmanager/config.yml'
       - '--storage.path=/alertmanager'
     restart: unless-stopped
     expose:
-      - 9093
+      - 9091
     networks:
       - monitor-net
     labels:
       org.label-schema.group: "monitoring"
 
   nodeexporter:
-    image: prom/node-exporter:v1.7.0
-    container_name: nodeexporter
+    image: prom/node-exporter:latest
+    container_name: node_exporter
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
@@ -68,7 +71,7 @@ services:
       org.label-schema.group: "monitoring"
 
   cadvisor:
-    image: gcr.io/cadvisor/cadvisor:v0.47.2
+    image: gcr.io/cadvisor/cadvisor:latest
     container_name: cadvisor
     privileged: true
     devices:
@@ -81,56 +84,61 @@ services:
       #- /cgroup:/cgroup:ro #doesn't work on MacOS only for Linux
     restart: unless-stopped
     expose:
-      - 7070
+      - 9092
     networks:
       - monitor-net
     labels:
       org.label-schema.group: "monitoring"
 
   grafana:
-    image: grafana/grafana:10.2.2
+    image: grafana/grafana:latest
     container_name: grafana
     volumes:
-      - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+#      - grafana_data:/var/lib/grafana
+      - /srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/grafana/grafana_data:/var/lib/grafana
+#      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+#      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+      - /srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - /srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+      
     environment:
-      - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
-      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_USER:-admin}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
     restart: unless-stopped
     expose:
-      - 3000
+      - 9093
     networks:
       - monitor-net
     labels:
       org.label-schema.group: "monitoring"
 
   pushgateway:
-    image: prom/pushgateway:v1.6.2
+    image: prom/pushgateway:latest
     container_name: pushgateway
     restart: unless-stopped
     expose:
-      - 9091
+      - 9094
     networks:
       - monitor-net
     labels:
       org.label-schema.group: "monitoring"
 
   caddy:
-    image: caddy:2.7.5
+    image: caddy:latest
     container_name: caddy
     ports:
-      - "3000:3000"
-      - "7070:7070"
       - "9090:9090"
-      - "9093:9093"
       - "9091:9091"
+      - "9092:9092"
+      - "9093:9093"
+      - "9094:9094"
     volumes:
-      - ./caddy:/etc/caddy
+#      - ./caddy:/etc/caddy
+      - /srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/caddy:/etc/caddy
     environment:
-      - ADMIN_USER=${ADMIN_USER:-admin}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+      - ADMIN_USER=${CADDY_USER:-admin}
+      - ADMIN_PASSWORD=${CADDY_PASSWORD:-admin}
       - ADMIN_PASSWORD_HASH=${ADMIN_PASSWORD_HASH:-$2a$14$1l.IozJx7xQRVmlkEQ32OeEEfP5mRxTpbDTCTcXRqn19gXD8YK1pO}
     restart: unless-stopped
     networks:
