--- a/monitoring.yml
+++ b/monitoring.yml
@@ -106,8 +106,10 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
     restart: unless-stopped
-    expose:
-      - 9093
+#    expose:
+#      - 9093
+        ports:
+      - "9093:9093"
     networks:
       - monitor-net
     labels:
@@ -131,7 +133,7 @@ services:
       - "9090:9090"
       - "9091:9091"
       - "9092:9092"
-      - "9093:9093"
+#      - "9093:9093"
       - "9094:9094"
     volumes:
 #      - ./caddy:/etc/caddy
