--- a/test-monitoring.yml
+++ b/test-monitoring.yml
@@ -99,7 +99,8 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
     restart: unless-stopped
-    expose:
+#    expose:
+    ports:
       - 3000
     networks:
       - monitor-net
@@ -121,7 +122,7 @@ services:
     image: caddy:2.7.5
     container_name: caddy-test
     ports:
-      - "3000:3000"
+#      - "3000:3000"
       - "7070:7070"
       - "9090:9090"
       - "9093:9093"
