--- a/test-monitoring.yml
+++ b/test-monitoring.yml
@@ -102,8 +102,8 @@ services:
 #    expose:
     ports:
       - 3000
-    networks:
-      - monitor-net
+#    networks:
+#      - monitor-net
     labels:
       org.label-schema.group: "monitoring"
 
