--- a/test-monitoring.yml
+++ b/test-monitoring.yml
@@ -24,8 +24,10 @@ services:
       - '--storage.tsdb.retention.time=200h'
       - '--web.enable-lifecycle'
     restart: unless-stopped
-    expose:
-      - 9090
+    ports:
+        - 9090:9090
+#    expose:
+#      - 9090
 #    networks:
 #      - monitor-net
     labels:
@@ -40,8 +42,10 @@ services:
       - '--config.file=/etc/alertmanager/config.yml'
       - '--storage.path=/alertmanager'
     restart: unless-stopped
-    expose:
-      - 9093:9093
+    ports:
+        -9093:9093
+#    expose:
+#      - 9093:9093
 #    networks:
 #      - monitor-net
     labels:
@@ -60,8 +64,10 @@ services:
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
     restart: unless-stopped
-    expose:
-      - 9100
+    ports:
+        - 9100:9100
+#    expose:
+#      - 9100
 #    networks:
 #      - monitor-net
     labels:
@@ -80,8 +86,10 @@ services:
       - /var/lib/docker:/var/lib/docker:ro
       #- /cgroup:/cgroup:ro #doesn't work on MacOS only for Linux
     restart: unless-stopped
-    expose:
-      - 7070
+    ports:
+        - 7070:7070
+#    expose:
+#      - 7070
 #    networks:
 #      - monitor-net
     labels:
@@ -99,10 +107,10 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
     restart: unless-stopped
-    expose:
-#    ports:
-#      - 3000:3000
-    - 3000
+    ports:
+      - 3000:3000
+#    expose:
+#    - 3000
 #    networks:
 #      - monitor-net
     labels:
@@ -112,30 +120,32 @@ services:
     image: prom/pushgateway:v1.6.2
     container_name: pushgateway-test
     restart: unless-stopped
-    expose:
-      - 9091
+    ports:
+        - 9091:9091
+#    expose:
+#      - 9091
 #    networks:
 #      - monitor-net
     labels:
       org.label-schema.group: "monitoring"
 
-  caddy:
-    image: caddy:2.7.5
-    container_name: caddy-test
-    ports:
-      - "3000:3000"
-      - "7070:7070"
-      - "9090:9090"
-      - "9093:9093"
-      - "9091:9091"
-    volumes:
-      - /srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/monitoring/caddy:/etc/caddy
-    environment:
-      - ADMIN_USER=${ADMIN_USER:-admin}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
-      - ADMIN_PASSWORD_HASH=${ADMIN_PASSWORD_HASH:-$2a$14$1l.IozJx7xQRVmlkEQ32OeEEfP5mRxTpbDTCTcXRqn19gXD8YK1pO}
-    restart: unless-stopped
+#  caddy:
+#    image: caddy:2.7.5
+#    container_name: caddy-test
+#    ports:
+#      - "3000:3000"
+#      - "7070:7070"
+#      - "9090:9090"
+#      - "9093:9093"
+#      - "9091:9091"
+#    volumes:
+#      - /srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/docker/monitoring/caddy:/etc/caddy
+#    environment:
+#      - ADMIN_USER=${ADMIN_USER:-admin}
+#      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+#      - ADMIN_PASSWORD_HASH=${ADMIN_PASSWORD_HASH:-$2a$14$1l.IozJx7xQRVmlkEQ32OeEEfP5mRxTpbDTCTcXRqn19gXD8YK1pO}
+#    restart: unless-stopped
 #    networks:
 #      - monitor-net
-    labels:
-      org.label-schema.group: "monitoring"
+#    labels:
+#      org.label-schema.group: "monitoring"
