--- a/monitoring.yml
+++ b/monitoring.yml
@@ -17,4 +17,19 @@ services:
       - '--web.enable-lifecycle'
     restart: unless-stopped
     ports:
-      - 9090:9090
+      - '9090:9090'
+
+  grafana:
+    image: grafana/grafana-enterprise:latest
+    container_name: grafana
+    volumes:
+      - /docker/monitoring/grafana/grafana_data:/var/lib/grafana
+      - /docker/monitoring/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - /docker/monitoring/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
+      - GF_USERS_ALLOW_SIGN_UP=false
+    restart: unless-stopped
+    ports:
+      - '3000:3000'
