--- a/monitoring.yml
+++ b/monitoring.yml
@@ -18,6 +18,7 @@ services:
     restart: unless-stopped
     ports:
       - '9090:80'
+    network_mode: "host"
 
   grafana:
     image: grafana/grafana-enterprise:latest
@@ -33,3 +34,4 @@ services:
     restart: unless-stopped
     ports:
       - '3000:80'
+    network_mode: "host"
