--- a/monitoring.yml
+++ b/monitoring.yml
@@ -18,7 +18,7 @@ services:
     restart: unless-stopped
     ports:
       - '9090:80'
-    network_mode: "host"
+    network_mode: "bridge"
 
   grafana:
     image: grafana/grafana-enterprise:latest
@@ -34,4 +34,4 @@ services:
     restart: unless-stopped
     ports:
       - '3000:80'
-    network_mode: "host"
+    network_mode: "bridge"
