--- a/monitoring.yml
+++ b/monitoring.yml
@@ -9,7 +9,7 @@ services:
       - /docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - /docker/monitoring/prometheus/prometheus-data:/prometheus
     command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
+#      - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
@@ -17,12 +17,11 @@ services:
       - '--web.enable-lifecycle'
     restart: unless-stopped
     ports:
-      - '9090:80'
-    network_mode: "bridge"
+      - '9090:9090'
 
   grafana:
     image: grafana/grafana-enterprise:latest
-    container_name: grafana
+    container_name: grafana-test
     volumes:
       - /docker/monitoring/grafana/grafana_data:/var/lib/grafana
       - /docker/monitoring/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
@@ -33,5 +32,4 @@ services:
       - GF_USERS_ALLOW_SIGN_UP=false
     restart: unless-stopped
     ports:
-      - '3000:80'
-    network_mode: "bridge"
+      - '3000:3000'
