--- a/monitoring.yml
+++ b/monitoring.yml
@@ -9,7 +9,7 @@ services:
       - /docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - /docker/monitoring/prometheus/prometheus-data:/prometheus
     command:
-#      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
@@ -26,7 +26,6 @@ services:
       - /docker/monitoring/grafana/grafana_data:/var/lib/grafana
       - /docker/monitoring/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
       - /docker/monitoring/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
-      grafana-storage: {}
     environment:
       - GF_SECURITY_ADMIN_USER=${GRAFANA_USER}
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
@@ -34,3 +33,5 @@ services:
     restart: unless-stopped
     ports:
       - '3000:3000'
+volumes:
+  grafana-storage: {}
