--- a/monitoring.yml
+++ b/monitoring.yml
@@ -1,13 +1,21 @@
 version: '2.1'
 
+networks:
+  monitor-net:
+    driver: bridge
+
+volumes:
+    prometheus_data: {}
+    grafana_data: {}
+
 services:
 
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
     volumes:
-      - /docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-      - /docker/monitoring/prometheus/prometheus-data:/prometheus
+      - ./prometheus:/etc/prometheus
+      - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -16,22 +24,28 @@ services:
       - '--storage.tsdb.retention.time=200h'
       - '--web.enable-lifecycle'
     restart: unless-stopped
-    ports:
-      - '9090:9090'
+    expose:
+      - 9090
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
 
-  grafana:
+    grafana:
     image: grafana/grafana-enterprise:latest
-    container_name: grafana-test
+    container_name: grafana
     volumes:
-      - /docker/monitoring/grafana/grafana_data:/var/lib/grafana
-      - /docker/monitoring/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-      - /docker/monitoring/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
     environment:
       - GF_SECURITY_ADMIN_USER=${GRAFANA_USER}
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
       - GF_USERS_ALLOW_SIGN_UP=false
     restart: unless-stopped
-    ports:
-      - '3000:3000'
-volumes:
-  grafana-storage: {}
+    expose:
+      - 3000
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
