--- a/monitoring.yml
+++ b/monitoring.yml
@@ -32,7 +32,7 @@ services:
       org.label-schema.group: "monitoring"
 
     grafana:
-    image: grafana/grafana-enterprise:latest
+    image: grafana/grafana:latest
     container_name: grafana
     volumes:
       - grafana_data:/var/lib/grafana
@@ -45,6 +45,27 @@ services:
     restart: unless-stopped
     expose:
       - 3000
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
+  caddy:
+    image: caddy:2.7.6
+    container_name: caddy
+    ports:
+      - "3000:3000"
+#      - "8080:8080"
+      - "9090:9090"
+#      - "9093:9093"
+#      - "9091:9091"
+    volumes:
+      - ./caddy:/etc/caddy
+    environment:
+      - ADMIN_USER=${ADMIN_USER:-admin}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+      - ADMIN_PASSWORD_HASH=${ADMIN_PASSWORD_HASH:-$2a$14$1l.IozJx7xQRVmlkEQ32OeEEfP5mRxTpbDTCTcXRqn19gXD8YK1pO}
+    restart: unless-stopped
     networks:
       - monitor-net
     labels:
