--- a/monitoring.yml
+++ b/monitoring.yml
@@ -3,7 +3,7 @@ version: '3'
 volumes:
     prometheus_data: {}
     grafana_data: {}
-    alertmanager_data: {]
+    alertmanager_data: {}
 
 networks:
   monitor-net:
