--- a/monitoring.yml
+++ b/monitoring.yml
@@ -3,7 +3,6 @@ version: '3'
 volumes:
     prometheus_data: {}
     grafana_data: {}
-    alertmanager_data: {}
 
 networks:
   monitor-net:
@@ -16,7 +15,7 @@ services:
     container_name: prometheus
     volumes:
       - ./prometheus:/etc/prometheus
-      - prometheus_data:/docker/monitoring/prometheus
+      - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -35,7 +34,6 @@ services:
     container_name: alertmanager
     volumes:
       - ./alertmanager:/etc/alertmanager
-      - alertmanager_data:/docker/monitoring/alertmanager
     command:
       - '--config.file=/etc/alertmanager/config.yml'
       - '--storage.path=/alertmanager'
