--- a/monitoring.yml
+++ b/monitoring.yml
@@ -1,85 +1,15 @@
-version: '3'
-
-volumes:
-    prometheus_data: {}
-    grafana_data: {}
-
-networks:
-  monitor-net:
-    driver: host
-    
+version: "3.8"
 services:
-
-  prometheus:
-    image: prom/prometheus:v2.50.1
-    container_name: prometheus
-    volumes:
-      - ./prometheus:/etc/prometheus
-      - prometheus_data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=200h'
-      - '--web.enable-lifecycle'
-    restart: unless-stopped
-    networks:
-      - monitor-net
-    ports:
-      - 9090:9090
-
-  alertmanager:
-    image: prom/alertmanager:v0.27.0
-    container_name: alertmanager
-    volumes:
-      - ./alertmanager:/etc/alertmanager
-    command:
-      - '--config.file=/etc/alertmanager/config.yml'
-      - '--storage.path=/alertmanager'
-    restart: unless-stopped
-    networks:
-      - monitor-net
-    ports:
-      - 9093:9093
-
   grafana:
-    image: grafana/grafana:10.4.0
+    image: grafana/grafana-enterprise
     container_name: grafana
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
-    networks:
-      - monitor-net
-    ports:
-      - 3000:3000
-    depends_on:
-      - prometheus
-
-  blackbox:
-    container_name: blackbox_exporter
-    image: prom/blackbox-exporter:latest
     restart: unless-stopped
-    volumes:
-    - /docker/monitoring/blackbox:/config
-    networks:
-      - monitor-net
-
-  nodeexporter:
-    image: prom/node-exporter:v1.7.0
-    container_name: nodeexporter
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
-    command:
-      - '--path.procfs=/host/proc'
-      - '--path.rootfs=/rootfs'
-      - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
-    restart: unless-stopped
-    networks:
-      - monitor-net
+    environment:
+     - GF_SERVER_ROOT_URL=http://my.grafana.server/
+     - GF_INSTALL_PLUGINS=grafana-clock-panel
     ports:
-      - 9100:9100
+     - '3000:3000'
+    volumes:
+     - 'grafana_storage:/var/lib/grafana'
+volumes:
+  grafana_storage: {}
