--- a/monitoring.yml
+++ b/monitoring.yml
@@ -10,7 +10,9 @@ services:
     ports:
      - '3000:3000'
     volumes:
-     - '/docker/monitoring/grafana:/var/lib/grafana'
+      - 'grafana_storage:/var/lib/grafana'
+volumes:
+  grafana_storage: {}
   
   prometheus:
     image: prom/prometheus:latest
