--- a/monitoring.yml
+++ b/monitoring.yml
@@ -25,3 +25,4 @@ services:
       - 9090:9090
     volumes:
       - '/docker/monitoring/prometheus:/etc/prometheus'
+      - '/docker/monitoring/prometheus:/prometheus'
