--- a/monitoring.yml
+++ b/monitoring.yml
@@ -1,8 +1,8 @@
 version: "3.8"
 
-#volumes:
+volumes:
 #  grafana_storage: {}
-
+  prometheus-data: [}
 services:
 
   grafana:
@@ -29,7 +29,8 @@ services:
       - '9090:9090'
     volumes:
       - '/docker/monitoring/prometheus:/etc/prometheus'
-      - '/docker/monitoring/prometheus:/prometheus'
+#      - '/docker/monitoring/prometheus:/prometheus'
+      - prometheus-data:/prometheus
       
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
