--- a/monitoring.yml
+++ b/monitoring.yml
@@ -25,7 +25,8 @@ services:
     ports:
       - '9090:9090'
     volumes:
-      - '/docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml'
+      - '/docker/monitoring/prometheus:/etc/prometheus'
+#      - '/docker/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml'
 #      - '/docker/monitoring/prometheus:/prometheus'
 #      - prometheus-data:/prometheus
   node_exporter:
