--- a/monitoring.yml
+++ b/monitoring.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 volumes:
 #  grafana_data: {}
-#  prometheus_data: {}
+  prometheus_data: {}
 services:
   grafana:
     image: grafana/grafana-enterprise
@@ -32,10 +32,9 @@ services:
     ports:
       - '9090:9090'
     volumes:
-      - /docker/monitoring/prometheus/config:/etc/prometheus
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-#      - ./prometheus:/etc/prometheus
-#      - prometheus_data:/prometheus
+      - /docker/monitoring/prometheus/config/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus:/etc/prometheus
+      - prometheus_data:/prometheus
   nodeexporter:
     image: quay.io/prometheus/node-exporter:latest
     container_name: nodeexporter
