--- a/navidrome.yml
+++ b/navidrome.yml
@@ -14,3 +14,4 @@ services:
       - '/srv/dev-disk-by-uuid-4eabc91d-46b4-4d1d-9b18-5c13f7f80153/musiques/musics:/music'
     labels:
       - com.centurylinklabs.watchtower.enable=true
+      org.label-schema.group: "app"
